added GC logs